--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <h1> Banking</h1>
+        <h1>Banking</h1>
         <h2>Valores</h2>
         <form id="formulario">
             <label for="campoA">Campo A:</label><br>
-            <input type="number" id="campoA" name="campoA"><br>
+            <input type="int" id="campoA" required name="campoA"><br>
             <label for="campoB">Campo B:</label><br>
-            <input type="number" id="campoB" name="campoB"><br><br>
+            <input type="int" id="campoB" required name="campoB"><br><br>
             <input type="submit" value="Enviar">
         </form>
     </div>
