--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h2>Valores</h2>
         <form id="formulario">
             <label for="campoA">Campo A:</label><br>
-            <input type="int" id="campoA" required name="campoA"><br>
+            <input type="int" id="campoA" required name="campo"><br>
             <label for="campoB">Campo B:</label><br>
-            <input type="int" id="campoB" required name="campoB"><br><br>
+            <input type="int" id="campoB" required name="campo2"><br><br>
             <input type="submit" value="Enviar">
         </form>
     </div>
